Fixed UPDATE messaging and readme failed
Update requests was missing api(index, currentPlayer) element and then
and catch. That is now added and console is not showing any error.
Readme is update nad should be showing wireframes as images now.

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -70,7 +70,7 @@ input {
 
 @media screen and (max-width: 550px) {
   p {
-    font-size: 2.3vh;
+    font-size: 2.7vh;
   }
   input {
     display: block;
